--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - antlr-python-runtime=4.7.2=py310hff52083_1003
   - blas=1.0=mkl
   - bokeh=2.4.1=py310h06a4308_0
   - bottleneck=1.3.4=py310h9102076_0
@@ -13,53 +14,61 @@ dependencies:
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.18.1=h7f8727e_0
   - ca-certificates=2022.4.26=h06a4308_0
-  - cartopy=0.18.0=py310h95ad73f_2
+  - cartopy=0.20.2=py310hb89acbc_4
   - certifi=2021.10.8=py310hff52083_2
+  - cf-units=3.0.1=py310h96516ba_2
   - cftime=1.5.1.1=py310h9102076_0
   - click=8.0.4=py310h06a4308_0
   - cloudpickle=2.0.0=pyhd3eb1b0_0
   - cmocean=2.0=py_3
   - colorspacious=1.1.2=pyh24bf2e0_0
+  - curl=7.83.1=h2283fc2_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - cytoolz=0.11.0=py310h7f8727e_0
   - dask=2022.2.1=pyhd3eb1b0_0
   - dask-core=2022.2.1=pyhd3eb1b0_0
   - distributed=2022.2.1=pyhd3eb1b0_0
+  - expat=2.4.8=h27087fc_0
   - fonttools=4.33.3=py310h5764c6d_0
   - freetype=2.11.0=h70c0345_0
   - fsspec=2022.2.0=pyhd3eb1b0_0
-  - geos=3.8.0=he6710b0_0
+  - geos=3.10.2=h9c3ff4c_0
   - giflib=5.2.1=h36c2ea0_2
+  - hdf4=4.2.13=h10796ff_1005
+  - hdf5=1.10.6=nompi_h3c11f04_101
   - heapdict=1.0.1=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - iris=3.2.1=pyhd8ed1ab_0
   - jbig=2.1=h7f98852_2003
   - jinja2=3.0.3=pyhd3eb1b0_0
   - joblib=1.1.0=pyhd3eb1b0_0
   - jpeg=9e=h166bdaf_1
+  - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.3.1=py310h295c915_0
-  - krb5=1.19.2=hac12032_0
+  - krb5=1.19.3=h08a2579_0
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.38=h1181459_0
   - lerc=2.2.1=h9c3ff4c_0
   - libbrotlicommon=1.0.9=h166bdaf_7
   - libbrotlidec=1.0.9=h166bdaf_7
   - libbrotlienc=1.0.9=h166bdaf_7
-  - libcurl=7.82.0=h0b77cf5_0
+  - libcurl=7.83.1=h2283fc2_0
   - libdeflate=1.7=h7f98852_5
   - libedit=3.1.20210910=h7f8727e_0
   - libev=4.33=h7f8727e_1
-  - libffi=3.3=he6710b0_2
+  - libffi=3.4.2=h7f98852_5
   - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=7.5.0=ha8ba4b0_17
   - libgfortran4=7.5.0=ha8ba4b0_17
   - libgomp=12.1.0=h8d9b700_16
-  - libnghttp2=1.46.0=hce63b2e_0
+  - libnetcdf=4.6.1=h2053bdc_4
+  - libnghttp2=1.47.0=he49606f_0
   - libnsl=2.0.0=h7f98852_0
   - libpng=1.6.37=h21135ba_2
-  - libssh2=1.10.0=h8f2d780_0
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libssh2=1.10.0=ha35d2d1_2
+  - libstdcxx-ng=12.1.0=ha89aaad_16
   - libtiff=4.3.0=hf544144_1
-  - libuuid=1.0.3=h7f8727e_2
+  - libuuid=2.32.1=h7f98852_1000
   - libwebp=1.2.2=h3452ae3_0
   - libwebp-base=1.2.2=h7f98852_1
   - libxcb=1.13=h7f98852_1004
@@ -75,30 +84,33 @@ dependencies:
   - msgpack-python=1.0.3=py310hd09550d_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - ncurses=6.3=h7f8727e_2
+  - netcdf4=1.5.7=py310hf533683_0
   - numexpr=2.7.3=py310hd732450_1
   - numpy=1.21.5=py310hfa59a62_2
   - numpy-base=1.21.5=py310h9585f30_2
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1o=h7f8727e_0
+  - openssl=3.0.3=h166bdaf_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.4.2=py310h295c915_0
   - partd=1.2.0=pyhd3eb1b0_1
   - pillow=9.1.0=py310he619898_2
   - pip=21.2.4=py310h06a4308_0
-  - proj=7.2.0=h1217e81_1
+  - proj=9.0.0=h93bde94_1
   - psutil=5.8.0=py310h7f8727e_1
   - pthread-stubs=0.4=h36c2ea0_1001
   - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyproj=3.3.1=py310h9bf108f_0
   - pyshp=2.1.3=pyhd3eb1b0_0
-  - python=3.10.4=h12debd9_0
+  - python=3.10.4=h2660328_0_cpython
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-xxhash=3.0.0=py310h5764c6d_1
   - python_abi=3.10=2_cp310
   - pytz=2021.3=pyhd3eb1b0_0
   - readline=8.1.2=h7f8727e_1
   - scikit-learn=1.0.1=py310h00e6091_0
   - scipy=1.7.3=py310hfa59a62_0
   - setuptools=61.2.0=py310h06a4308_0
-  - shapely=1.7.0=py310h21a7e75_0
+  - shapely=1.8.0=py310hb974679_6
   - six=1.16.0=pyhd3eb1b0_1
   - sortedcontainers=2.4.0=pyhd3eb1b0_0
   - sqlite=3.38.5=h4ff8645_0
@@ -110,11 +122,13 @@ dependencies:
   - typing-extensions=4.1.1=hd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - tzdata=2022a=hda174b7_0
+  - udunits2=2.2.28=hc3e0081_0
   - unicodedata2=14.0.0=py310h5764c6d_1
   - wheel=0.37.1=pyhd3eb1b0_0
   - xarray=0.20.1=pyhd3eb1b0_1
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xxhash=0.8.0=h7f98852_3
   - xz=5.2.5=h7f8727e_1
   - yaml=0.2.5=h7b6447c_0
   - zict=2.0.0=pyhd3eb1b0_0
